# cyder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  runCpplint.sh
.github/workflows/: main.yml
example/plugin/source/: ExamplePluginEditor.cpp  ExamplePluginEditor.h  ExamplePluginProcessor.cpp  ExamplePluginProcessor.h
source/: CyderAssert.hpp  CyderAudioProcessor.cpp  CyderAudioProcessor.hpp  CyderAudioProcessorEditor.cpp  CyderAudioProcessorEditor.hpp  CyderHeaderBar.cpp  CyderHeaderBar.hpp  HotReloadThread.cpp  HotReloadThread.hpp  Utilities.cpp  Utilities.hpp  main.cpp
tests/: test_CyderAudioProcessor.cpp  test_CyderAudioProcessorEditor.cpp  test_CyderHeaderBar.cpp  test_HotReloadThread.cpp  test_Utilities.cpp  test_main.cpp
